--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,7 @@
 #export DH_VERBOSE = 1
 
 VERSION ?= $(shell dpkg-parsechangelog |\
-	     sed -rne 's/^Version: ([0-9\.]+)/\1/p')
+	     sed -rne 's/^Version: ([0-9\.]+).*/\1/p')
 
 %:
 	dh $@
